# lab_attendance

./: .gitignore  AGENTS.md  README.md  deploy.sh  nginx-simple.conf  terraform.tfstate
apps/kbd-ir/: README.md  spec.md
apps/kbd-ir/backend/: main.py  models.py  requirements.txt
apps/kbd-ir/backend/core/: config.py  database.py  deps.py  email.py  security.py  storage.py
apps/kbd-ir/backend/routers/: __init__.py  auth.py  metadata.py  reviews.py  submissions.py  tournaments.py  uploads.py  users.py
apps/kbd-ir/backend/schemas/: auth.py  common.py  reviews.py  submissions.py  tournaments.py  uploads.py  users.py
apps/kbd-ir/backend/services/: auth.py  submissions.py  tournaments.py
apps/kbd-ir/backend/tests/: conftest.py  test_health.py
apps/kbd-ir/frontend/: jest.config.js  next.config.js  package.json
apps/lab-attendance/: .gitignore  README.md  nginx-maru65536.conf
apps/lab-attendance/backend/: backup_to_s3.py  main.py  requirements.txt
apps/lab-attendance/frontend/: next.config.js  package.json
apps/su8ru_wish/: pyproject.toml  spec.md  watcher.py
apps/su8ru_wish/tests/: test_watcher.py
backend/: main.py  requirements.txt
frontend/: next-simple.config.js  next.config.js  package.json  tsconfig.json
frontend/pages/: index.tsx
frontend/styles/: globals.css
infra/server/terraform/: kbd_ir.tf  main.tf  outputs.tf  variables.tf
nginx/: lab-attendance.conf
scripts/: deploy.sh  deploy_kbd_ir.sh  deploy_lab_attendance.sh  deploy_su8ru_wish.sh
site-root/: index.html  styles.css
terraform/: main.tf  outputs.tf  variables.tf
(+17 files in other folders)
