[project]
name = "su8ru-wish"
version = "0.1.0"
description = "Amazon wishlist watcher and Slack notifier"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
